5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1791_1600.log
== SUBMITION (2019-05-29 14:12:01) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if (c[i] > 80):
		d[i] = (c[i] - 15/100) 
	else:
		c[i] = c[i]
		i = i + 1
print(round,sum,2)
-- EXECUTION TIME:
0.440148
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
<built-in function round> <function sum at 0x7f6eb622f048> 2
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
<built-in function round> <function sum at 0x7f7c2afb0048> 2
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
<built-in function round> <function sum at 0x7fe57f21b048> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:12:02) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if (c[i] > 80):
		d[i] = (c[i] - 15/100) 
	else:
		c[i] = c[i]
		i = i + 1
print(round,sum,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:13:35) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if (c[i] > 80):
		d[i] = (c[i] - 15/100) 
	else:
		c[i] = c[i]
		i = i + 1

		print(round,sum,2)
-- EXECUTION TIME:
0.531598
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
<built-in function round> <function sum at 0x7f75a5a5b048> 2
<built-in function round> <function sum at 0x7f75a5a5b048> 2
<built-in function round> <function sum at 0x7f75a5a5b048> 2
<built-in function round> <function sum at 0x7f75a5a5b048> 2
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
<built-in function round> <function sum at 0x7f48767dc048> 2
<built-in function round> <function sum at 0x7f48767dc048> 2
<built-in function round> <function sum at 0x7f48767dc048> 2
<built-in function round> <function sum at 0x7f48767dc048> 2
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
<built-in function round> <function sum at 0x7f1243502048> 2
<built-in function round> <function sum at 0x7f1243502048> 2
<built-in function round> <function sum at 0x7f1243502048> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:14:13) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if (c[i] > 80):
		d[i] = (c[i] - 15/100) 
	else:
		c[i] = c[i]
		i = i + 1

	print(round,sum,2)
-- EXECUTION TIME:
1.19149
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
<built-in function round> <function sum at 0x7f95b26e5048> 2
<built-in function round> <function sum at 0x7f95b26e5048> 2
<built-in function round> <function sum at 0x7f95b26e5048> 2
<built-in function round> <function sum at 0x7f95b26e5048> 2
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
<built-in function round> <function sum at 0x7f8e65b05048> 2
<built-in function round> <function sum at 0x7f8e65b05048> 2
<built-in function round> <function sum at 0x7f8e65b05048> 2
<built-in function round> <function sum at 0x7f8e65b05048> 2
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
<built-in function round> <function sum at 0x7eff0c844048> 2
<built-in function round> <function sum at 0x7eff0c844048> 2
<built-in function round> <function sum at 0x7eff0c844048> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:14:21) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if (c[i] > 80):
		d[i] = (c[i] - 15/100) 
	else:
		c[i] = c[i]
		i = i + 1

print(round,sum,2)
-- EXECUTION TIME:
0.780903
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
<built-in function round> <function sum at 0x7fb60a5f6048> 2
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
<built-in function round> <function sum at 0x7f8e0c8ec048> 2
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
<built-in function round> <function sum at 0x7f600a199048> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:15:29) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if (c[i] > 80):
		d[i] = (c[i] - 15/100) 
	else:
		c[i] = c[i]
		i = i + 1

print(round,sum,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:37) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if (c[i] > 80):
		d[i] = (c[i] - 15/100) 
	else:
		c[i] = c[i]
		i = i + 1

print(round,sum,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:45) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if (c[i] > 80):
		d[i] = (c[i] - 15/100) 
	else:
		c[i] = c[i]
		i = i + 1

print(round,sum,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:20:02) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if (c[i] > 80):
		d[i] = (c[i] - 15/100) 
else:
		c[i] = c[i]
		i = i + 1

		print(round,sum,2)
-- EXECUTION TIME:
377.865
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:20:30) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if (c[i] > 80):
		d[i] = (c[i] - 15/100) 
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:22:14) 
-- CODE:
from numpy import*
c = array(eval(int(input("Valor: "))))
i = 0
d = 0
while (i < size(c)):
	if (c[i] > 80):
		d[i] = (c[i] - 15/100) 
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:12) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if int((c[i] > 80):
		d[i] = (c[i] - 15/100) 
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
File "XXXX", line 6
    if int((c[i] > 80):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:18) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if int((c[i] > 80)):
		d[i] = (c[i] - 15/100) 
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:23:19) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if int((c[i] > 80)):
		d[i] = (c[i] - 15/100) 
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- EXECUTION TIME:
0.46685
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
<built-in function round> [<function sum at 0x7f3f81515f28>] 2
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
<built-in function round> [<function sum at 0x7fbd911c4f28>] 2
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
Valor: <built-in function round> [<function sum at 0x7f99a1d13f28>] 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:00) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if int((c[i] > 80)):
		d[i] = int(c[i] - 15/100) 
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:21) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if int((c[i] > 80)):
		d[i] = (c[i] - 15/100) 
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:53) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if int((c[i] > 80)):
		int(d[i] = (c[i] - 15/100)) 
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
File "XXXX", line 7
    int(d[i] = (c[i] - 15/100)) 
       ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:24:54) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if int((c[i] > 80)):
		int(d[i] = (c[i] - 15/100)) 
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- EXECUTION TIME:
0.202994
-- ERROR:
  File "/home/codebench/codes/1791/1600/main.py", line 7
    int(d[i] = (c[i] - 15/100)) 
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:57) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if int((c[i] > 80)):
		int(d[i] = (c[i] - 15/100)) 
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
File "XXXX", line 7
    int(d[i] = (c[i] - 15/100)) 
       ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:26:18) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if int((c[i] > 80)):
		(d[i] = (c[i] - 15/100)
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
File "XXXX", line 7
    (d[i] = (c[i] - 15/100)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:26:25) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if int((c[i] > 80)):
		(d[i] = (c[i] - 15/100)
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- EXECUTION TIME:
0.124195
-- ERROR:
  File "/home/codebench/codes/1791/1600/main.py", line 7
    (d[i] = (c[i] - 15/100)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:24) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if int((c[i] > 80)):
		(d[i] = (c[i] - 15/100)
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
File "XXXX", line 7
    (d[i] = (c[i] - 15/100)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:27) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if int((c[i] > 80)):
		(d[i] = (c[i] - 15/100)
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
File "XXXX", line 7
    (d[i] = (c[i] - 15/100)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:42) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if int((c[i] > 80)):
		d[i] = (c[i] - 15/100)
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:24) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if int((c[i] > 80)):
		d[i] = c[i] - 15/100
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:49) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if int(c[i] > 80):
		d[i] = c[i] - 15/100
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:29:15) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if (c[i] > 80):
		d[i] = c[i] - 15/100
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:02) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if (c[i] > 80):
		d[i] = (c[i] - 15/100)
	else:
		c[i] = c[i]
			i = i + 1

print(round,[sum],2)
-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:06) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if (c[i] > 80):
		d[i] = (c[i] - 15/100)
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:40) 
-- CODE:
from numpy import*
c = array(eval(input("Valor: ")))
i = 0
d = 0
while (i < size(c)):
	if (c[i] > 80):
		d[i] = (c - 15/100)
	else:
		c[i] = c[i]
		i = i + 1

print(round,[sum],2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
